--- a/visualizer.ipynb
+++ b/visualizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,70 +12,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def visualize_graph(structure_syntaxique: list, output_file: str = \"graph\"):\n",
-    "    \"\"\"\n",
-    "    Génère et visualise un graphe à partir de la structure syntaxique JSON.\n",
+    "def visualize_graph(data: dict, output_file: str = \"graph\"):\n",
+    "   \"\"\"Generate a graph visualization from the input data.\"\"\"\n",
+    "   \n",
+    "   dot = Digraph(format=\"png\")\n",
+    "   dot.attr(rankdir=\"TB\")\n",
     "\n",
-    "    Parameters:\n",
-    "    - structure_syntaxique : Liste représentant la structure syntaxique.\n",
-    "    - output_file : Nom du fichier de sortie pour le graphe (sans extension).\n",
-    "    \"\"\"\n",
-    "    dot = Digraph(format=\"png\")\n",
-    "    dot.attr(rankdir=\"TB\")  # Disposition verticale du graphe\n",
+    "   for node in data[\"nodes\"]:\n",
+    "       node_id = str(node[\"numero_noeud\"])\n",
+    "       label = f'{node[\"type\"]}: {node[\"instruction\"]}'\n",
+    "       dot.node(node_id, label)\n",
     "\n",
-    "    def add_node(node, parent_id=None):\n",
-    "        \"\"\"\n",
-    "        Ajoute un nœud au graphe et relie les nœuds enfants récursivement.\n",
-    "        \n",
-    "        Parameters:\n",
-    "        - node : Dictionnaire représentant un nœud.\n",
-    "        - parent_id : ID du nœud parent, si applicable.\n",
-    "        \"\"\"\n",
-    "        node_id = str(node[\"numero_noeud\"])\n",
-    "        label = f'{node[\"type\"]}: {node[\"instruction\"]}'\n",
-    "        dot.node(node_id, label)\n",
+    "       # Add edges\n",
+    "       if \"suivant\" in node and node[\"suivant\"]:\n",
+    "           for target_id, condition in node[\"suivant\"]:\n",
+    "               dot.edge(node_id, str(target_id), condition)\n",
     "\n",
-    "        # Ajouter une arête depuis le parent\n",
-    "        if parent_id is not None:\n",
-    "            dot.edge(parent_id, node_id)\n",
-    "\n",
-    "        # Ajouter les enfants si le nœud a un contenu\n",
-    "        if \"contenu\" in node and node[\"contenu\"]:\n",
-    "            for child in node[\"contenu\"]:\n",
-    "                add_node(child, node_id)\n",
-    "\n",
-    "    # Ajouter les nœuds principaux\n",
-    "    for node in structure_syntaxique:\n",
-    "        add_node(node)\n",
-    "\n",
-    "    # Générer et afficher le graphe\n",
-    "    dot.render(output_file, view=True)\n",
-    "    print(f\"Graphe généré et sauvegardé dans {output_file}.png\")\n"
+    "   dot.render(output_file, view=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graphe généré et sauvegardé dans graph.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Charger la structure JSON\n",
     "with open(\"structure_syntaxique.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    structure_syntaxique = json.load(f)\n",
-    "    \n",
-    "visualize_graph(structure_syntaxique)"
+    "   data = json.load(f)\n",
+    "   visualize_graph(data)"
    ]
   },
   {
@@ -88,7 +56,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tal",
+   "display_name": "calculabilite",
    "language": "python",
    "name": "python3"
   },
@@ -102,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
